tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@compare_string_with_int.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/compare_string_with_int.txt
---
error: Cannot compare `string` with `i64`
 --> compare_string_with_int.txt:1:4
  |
1 | {{ name > 1 }}
  |    ^^^^^^^^
